# handler/listOpenings.go
@@ -7,6 +7,16 @@ import (
 	"github.com/thiago-kersting/gopportunities/schemas"
 )
 
+// @BasePath /api/v1
+
+// @Summary Show openings
+// @Description Show jobs openings
+// @Tags Openings
+// @Accept json
+// @Produce json
+// @Success 200 {object} ListOpeningsResponse
+// @Failure 500 {object} ErrorResponse
+// @Router /openings [get]
 func ListOpeningsHandler(ctx *gin.Context) {
 	openings := []schemas.Opening{}
 
